--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,20 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --color-rgb: 255, 255, 255;
+  --background-rgb: 38, 61, 80;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: rgb(var(--background-rgb));
+  color: rgb(var(--color-rgb))
+}
+
+h1 {
+  font-family: 'Marcellus', serif;
+}
+
+footer {
+  font-family: 'Marcellus', serif;
+  @apply block py-4 mx-auto text-center italic text-xs;
 }
