--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -7,13 +7,10 @@
     position: relative;
 }
 
-.flor alHeader .image {
-}
-
 .floralHeader h1 {
-    @apply text-4xl md:text-8xl pt-8 md:pt-0;
+    @apply text-4xl md:text-8xl pt-8 md:pt-0  md:mt-8;
 }
 
 .floralHeader h1 small {
-    @apply font-light text-base md:text-3xl block pt-4 leading-6;
+    @apply font-sans font-light text-base md:text-xl tracking-wider block pt-4 md:leading-loose;
 }
