--- a/app/globals.css
+++ b/app/globals.css
@@ -20,3 +20,11 @@ footer {
   font-family: 'Marcellus', serif;
   @apply block py-4 mx-auto text-center italic text-xs;
 }
+
+.heroHeading {
+  @apply text-4xl md:text-8xl pt-8 md:pt-0  md:mt-8;
+}
+
+.heroHeading small {
+  @apply font-sans font-light text-base md:text-xl tracking-wider block pt-4 md:leading-loose;
+}
