--- a/components/TakePicture.module.css
+++ b/components/TakePicture.module.css
@@ -1,5 +1,5 @@
 .cameraButton {
-    @apply flex mx-5 px-2 py-36 border-2 border-dashed justify-center items-center rounded-xl bg-cover bg-no-repeat bg-center aspect-[3/4];
+    @apply relative overflow-hidden flex mx-5 px-2 py-36 border-2 border-dashed justify-center items-center rounded-xl bg-cover bg-no-repeat bg-center aspect-[3/4];
     border-color: rgb(var(--color-rgb));
 }
 
@@ -15,11 +15,19 @@
     display: none;
 }
 
+.cameraButton .loadingOverlay {
+    @apply absolute w-full h-full bg-black bg-opacity-80 flex justify-center items-center md:text-2xl;
+}
+
+.cameraButton .loadingOverlay > svg {
+    @apply w-12 h-auto;
+}
+
 .controls {
     @apply mx-5 py-5 flex justify-around;
 }
 .controls .btn {
-    @apply bg-white bg-opacity-50 p-8 rounded-xl;
+    @apply bg-white bg-opacity-50 p-8 rounded-xl disabled:bg-opacity-10;
 }
 
 .controls .btn svg {
