--- a/app/globals.css
+++ b/app/globals.css
@@ -49,3 +49,9 @@ footer {
 .imageLeft {
   @apply mx-auto mb-2 md:float-left md:mb-1 md:mt-2 md:mr-2 rounded-md;
 }
+
+.lg-icon.no-font {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+  font-weight: normal;
+  font-size: .75rem !important;
+}
