--- a/app/globals.css
+++ b/app/globals.css
@@ -3,55 +3,57 @@
 @tailwind utilities;
 
 :root {
-  --color-rgb: 255, 255, 255;
-  --background-rgb: 38, 61, 80;
+    --color-rgb: 255, 255, 255;
+    --background-rgb: 16, 23, 61;
+    --white: 255, 255, 255
 }
 
 body {
-  background-color: rgb(var(--background-rgb));
-  color: rgb(var(--color-rgb));
-  font-family: 'Marcellus', serif;
+    background-image: linear-gradient(#2C305A, #22365A);
+    background-attachment: fixed;
+    color: rgb(var(--color-rgb));
+    font-family: 'Marcellus', serif;
 }
 
 body *::selection {
-  background-color: rgba(var(--color-rgb), .25);
+    background-color: rgba(var(--color-rgb), .25);
 }
 
 p {
-  @apply mb-4 leading-7;
+    @apply mb-4 leading-7;
 }
 
 p:first-of-type {
-  @apply -indent-1;
+    @apply -indent-1;
 }
 
 p:first-of-type::first-letter, p.initialLetter::first-letter {
-  initial-letter: 2;
-  @apply pr-2 italic;
+    initial-letter: 2;
+    @apply pr-2 italic;
 }
 
 footer {
-  @apply block py-4 mx-auto text-center italic text-xs mt-8 mb-2;
+    @apply block py-4 mx-auto text-center italic text-xs mt-8 mb-2;
 }
 
 .heroHeading {
-  @apply text-4xl md:text-8xl mb-8 mt-12 md:pt-0 md:mt-12 md:mb-8;
+    @apply text-4xl md:text-8xl mb-8 mt-12 md:pt-0 md:mt-12 md:mb-8;
 }
 
 .heroHeading small {
-  @apply font-light text-base md:text-xl tracking-wider block pt-4 leading-5;
+    @apply font-light text-base md:text-xl tracking-wider block pt-4 leading-5;
 }
 
 .imageRight {
-  @apply mx-auto mb-2 md:float-right md:mb-1 md:mt-2 md:ml-2 rounded-md;
+    @apply mx-auto mb-2 md:float-right md:mb-1 md:mt-2 md:ml-2 rounded-md;
 }
 
 .imageLeft {
-  @apply mx-auto mb-2 md:float-left md:mb-1 md:mt-2 md:mr-2 rounded-md;
+    @apply mx-auto mb-2 md:float-left md:mb-1 md:mt-2 md:mr-2 rounded-md;
 }
 
 .lg-icon.no-font {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
-  font-weight: normal;
-  font-size: .75rem !important;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+    font-weight: normal;
+    font-size: .75rem !important;
 }
