--- a/app/(ContainerLayout)/story/TimelinePageContent.module.css
+++ b/app/(ContainerLayout)/story/TimelinePageContent.module.css
@@ -1,12 +1,12 @@
 .avatar {
-    @apply rounded-full absolute border-2 transition-all duration-500;
+    @apply rounded-full absolute border-2 border-opacity-5 transition-all duration-500 shadow-xl;
 }
 
 .kim {
     @apply left-1/4 -translate-x-10;
 }
 .kim.__coupled {
-    @apply left-1/2 -translate-x-3/4
+    @apply left-1/2 -translate-x-20
 }
 
 .stephan {
