--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,7 +14,12 @@ body {
     background-image: linear-gradient(#2C305A, #22365A);
     background-attachment: fixed;
     color: rgb(var(--color-rgb));
+    font-family: 'Open Sans', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Marcellus', serif;
+    @apply font-extrabold;
 }
 
 body *::selection {
@@ -23,21 +30,34 @@ p {
     @apply mb-4 leading-7;
 }
 
-p:first-of-type {
-    @apply -indent-1;
+p.initialLetter {
+    @apply relative;
+}
+p.initialLetter::first-letter {
+    initial-letter: 2;
+    @apply pl-0 pr-2 italic absolute;
 }
 
-p:first-of-type::first-letter, p.initialLetter::first-letter {
-    initial-letter: 2;
-    @apply pr-2 italic;
+dl.horizontal {
+    @apply grid grid-cols-8;
+}
+dl.horizontal dt {
+    @apply col-span-2 font-extrabold italic;
+}
+dl.horizontal dd {
+    @apply col-span-6;
 }
 
 footer {
     @apply block py-4 mx-auto text-center italic text-xs mt-8 mb-2;
 }
 
+.heading {
+    @apply mb-16 mt-12 md:pt-0 md:mt-12
+}
+
 .heroHeading {
-    @apply text-6xl md:text-8xl mb-8 mt-12 md:pt-0 md:mt-12 md:mb-8;
+    @apply text-6xl md:text-8xl mb-16 mt-12 md:pt-0 md:mt-12;
 }
 
 .heroHeading small {
