--- a/components/starfield/AnimatedStarfield.module.scss
+++ b/components/starfield/AnimatedStarfield.module.scss
@@ -28,7 +28,7 @@ $shadows-big: multiple-box-shadow(300);
   left: 0;
   width: 100vw;
   position: fixed;
-  z-index: -10;
+  pointer-events: none;
 }
 
 .starContainer {
