--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,8 @@ h3 {
 }
 
 body *::selection {
-    background-color: rgba(var(--color-rgb), .25);
+    --color-rgb: 9, 15, 58;
+    background-color: rgba(var(--color-rgb), .3);
 }
 
 p:has(+ p) {
