--- a/components/GuestForm.module.css
+++ b/components/GuestForm.module.css
@@ -6,7 +6,7 @@
     left: 5%;
     content: '🚀';
     font-size: 5rem;
-    animation: rocket 2s ease-in-out forwards;
+    animation: rocket 2s ease-in forwards;
 }
 
 @media (prefers-reduced-motion) {
@@ -18,12 +18,20 @@
 @keyframes rocket {
     0% {
         opacity: 0;
+        font-size: 1rem;
         transform: translate(0,0);
     }
+    10% {
+        opacity: 1;
+    }
     20% {
+        font-size: 4rem;
+    }
+    90% {
         opacity: 1;
     }
     100% {
-        transform: translate(1000px,-1000px) ;
+        transform: translate(1000px,-1000px);
+        opacity: 0;
     }
 }
