--- a/components/shootingstar/Shootingstar.module.css
+++ b/components/shootingstar/Shootingstar.module.css
@@ -2,15 +2,17 @@
     --animation-duration: 4s;
     --deg: -185deg;
     --top: 20%;
-    
+
     position: absolute;
     left: 20%;
     width: 4px;
     height: 4px;
     background: #fff;
     border-radius: 50%;
-    box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1),
-    0 0 0 8px rgba(255, 255, 255, 0.1), 0 0 20px rgba(255, 255, 255, 1);
+    box-shadow:
+        0 0 0 4px rgba(255, 255, 255, 0.1),
+        0 0 0 8px rgba(255, 255, 255, 0.1),
+        0 0 20px rgba(255, 255, 255, 1);
     top: var(--top);
     right: 0;
 
@@ -18,7 +20,6 @@
     transform: rotate(calc(var(--deg))) translateX(0px);
     transition-property: opacity, transform;
     transition-timing-function: ease;
-    
 }
 .shootingstar.animate {
     transition-duration: var(--animation-duration);
@@ -27,7 +28,7 @@
 }
 
 .shootingstar::before {
-    content: "";
+    content: '';
     position: absolute;
     top: var(--top);
     transform: translateY(0);
