--- a/components/timeline/Timeline.module.css
+++ b/components/timeline/Timeline.module.css
@@ -1,9 +1,8 @@
 .timeline-bar {
-    @apply hidden w-0.5 bg-white/20 backdrop-blur absolute h-full left-1/2 transform -translate-x-1/2;
+    @apply absolute left-1/2 hidden h-full w-0.5 -translate-x-1/2 transform bg-white/20 backdrop-blur;
     @apply sm:block;
 }
 
 .timeline-bar__icon {
-    @apply absolute text-white/20 text-2xl top-0 -translate-x-1/2 -translate-y-8;
+    @apply absolute top-0 -translate-x-1/2 -translate-y-8 text-2xl text-white/20;
 }
-
