--- a/components/shootingstar/Shootingstar.module.css
+++ b/components/shootingstar/Shootingstar.module.css
@@ -9,10 +9,9 @@
     height: 4px;
     background: #fff;
     border-radius: 50%;
-    box-shadow:
-        0 0 0 4px rgba(255, 255, 255, 0.1),
-        0 0 0 8px rgba(255, 255, 255, 0.1),
-        0 0 20px rgba(255, 255, 255, 1);
+    box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1),
+    0 0 0 8px rgba(255, 255, 255, 0.1),
+    0 0 20px rgba(255, 255, 255, 1);
     top: var(--top);
     right: 0;
 
@@ -21,6 +20,7 @@
     transition-property: opacity, transform;
     transition-timing-function: ease;
 }
+
 .shootingstar.animate {
     transition-duration: var(--animation-duration);
     opacity: 1;
