--- a/components/GuestForm.module.css
+++ b/components/GuestForm.module.css
@@ -1,38 +1,38 @@
 .success {
-    overflow: visible;
+  overflow: visible;
 }
 
 .success::after {
-    position: absolute;
-    left: 5%;
-    content: '🚀';
-    font-size: 5rem;
-    animation: rocket 2s ease-in forwards;
+  position: absolute;
+  left: 5%;
+  content: "🚀";
+  font-size: 5rem;
+  animation: rocket 2s ease-in forwards;
 }
 
 @media (prefers-reduced-motion) {
-    .success::after {
-        display: none;
-    }
+  .success::after {
+    display: none;
+  }
 }
 
 @keyframes rocket {
-    0% {
-        opacity: 0;
-        font-size: 1rem;
-        transform: translate(0, 0);
-    }
-    10% {
-        opacity: 1;
-    }
-    20% {
-        font-size: 4rem;
-    }
-    90% {
-        opacity: 1;
-    }
-    100% {
-        transform: translate(1000px, -1000px);
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+    font-size: 1rem;
+    transform: translate(0, 0);
+  }
+  10% {
+    opacity: 1;
+  }
+  20% {
+    font-size: 4rem;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: translate(1000px, -1000px);
+    opacity: 0;
+  }
 }
