--- a/components/starfield/AnimatedStarfield.module.scss
+++ b/components/starfield/AnimatedStarfield.module.scss
@@ -1,14 +1,14 @@
 // n is number of stars required
 @function multiple-box-shadow($n) {
-  $value: '#{random(5000)}px #{random(5000)}px #FFF';
+  $value: "#{random(5000)}px #{random(5000)}px #FFF";
   @for $i from 2 through $n {
-    $valA: '#{random(5000) - 2000}px';
-    $valB: '#{random(5000) - 2000}px';
-    $color1: '#{random(20)+270}';
-    $color2: '#{random(20)+270}';
-    $color3: '#{random(20)+270}';
-    $color: 'rgba(#{$color1}, #{$color2}, #{$color3}, #{(random(10) + 80)/100})';
-    $value: '#{$value} , #{$valA} #{$valB} #{$color}, #{$valA} #{$valB} 7px #{$color}';
+    $valA: "#{random(5000) - 2000}px";
+    $valB: "#{random(5000) - 2000}px";
+    $color1: "#{random(20)+270}";
+    $color2: "#{random(20)+270}";
+    $color3: "#{random(20)+270}";
+    $color: "rgba(#{$color1}, #{$color2}, #{$color3}, #{(random(10) + 80)/100})";
+    $value: "#{$value} , #{$valA} #{$valB} #{$color}, #{$valA} #{$valB} 7px #{$color}";
   }
   @return unquote($value);
 }
@@ -62,7 +62,7 @@ $shadows-big: multiple-box-shadow(300);
     left: 50%;
 
     &:after {
-      content: ' ';
+      content: " ";
       border-radius: 50%;
       position: absolute;
       top: 2000px;
@@ -89,7 +89,7 @@ $shadows-big: multiple-box-shadow(300);
     left: 50%;
 
     &:after {
-      content: ' ';
+      content: " ";
       border-radius: 50%;
       position: absolute;
       top: 2000px;
@@ -117,7 +117,7 @@ $shadows-big: multiple-box-shadow(300);
     left: 50%;
 
     &:after {
-      content: ' ';
+      content: " ";
       border-radius: 50%;
       position: absolute;
       top: 2000px;
@@ -145,7 +145,7 @@ $shadows-big: multiple-box-shadow(300);
     left: 50%;
 
     &:after {
-      content: ' ';
+      content: " ";
       border-radius: 50%;
       position: absolute;
       top: 2000px;
