--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 
 :root {
     --color-rgb: 255, 255, 255;
-    --background-color: linear-gradient(#400101, #8C0303);
+    --background-color: linear-gradient(#dfba8f, #d67a11);
     --white: 255, 255, 255;
 }
 
