--- a/components/TakePicture.module.css
+++ b/components/TakePicture.module.css
@@ -2,6 +2,7 @@
   @apply relative flex aspect-[3/4] items-center justify-center overflow-hidden rounded-xl border-2 border-dashed bg-cover bg-center bg-no-repeat text-sm md:text-base;
   @apply text-center;
   border-color: rgb(var(--color-rgb));
+  color: rgb(var(--color-rgb));
 }
 
 .cameraButtonLabel {
