--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,7 @@
 @import './fonts/Marcellus/index.css';
 @import './fonts/OpenSans/index.css';
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 :root {
     --color-rgb: 0, 0, 0;
@@ -88,10 +86,4 @@ footer {
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
     font-weight: normal;
     font-size: 0.75rem !important;
-}
-
-.tartan {
-    background-image: url('/img/tartan.jpg');
-    background-repeat: repeat-y;
-    background-size: 100%;
 }
